<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/activity_help"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="com.playposse.landoftherooster.activity.PermissionRecoveryActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        android:visibility="gone"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <LinearLayout
        android:id="@+id/request_permission_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingEnd="25dp"
        android:paddingStart="25dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:paddingBottom="10dp"
            android:text="@string/permission_error_title"
            android:textColor="#000"
            android:textSize="@dimen/abc_text_size_headline_material"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:paddingBottom="20dp"
            android:text="@string/permission_error_message"
            android:textSize="@dimen/abc_text_size_body_1_material"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:paddingBottom="25dp">

            <TextView
                android:id="@+id/grant_location_permission_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="start"
                android:paddingBottom="20dp"
                android:text="@string/location_permission_label"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/grant_location_permission_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="sans-serif-medium"
                android:paddingBottom="20dp"
                android:text="@string/grant_permission_link"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/abc_text_size_body_1_material"/>
        </GridLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/dividerDark"/>
    </LinearLayout>
</LinearLayout>